Update Readme, put openai calls to rest service
